--- a/src/locales/languages.csv
+++ b/src/locales/languages.csv
@@ -111,6 +111,7 @@ calc.maintainer-groups.temp,Temporary,Temporário,Ungespeichert,Temporal,임시
 calc.maintainer-groups.uibk,University of Innsbruck,University of Innsbruck,Universität Innsbruck,Universidad de Innsbruck,Innsbruck 대학교
 calc.maintainer-groups.karlsruhe,Karlsruhe University of Applied Sciences,Universidade de Ciências Aplicadas de Karlsruhe,Hochschule Karlsruhe,Universidad de Ciencias Aplicadas de Karlsruhe,Karlsruhe 대학교
 calc.maintainer-groups.saarland,University of Saarland,University of Saarland,Universität Saarland,Universidad de Saarland,Saarland 대학교
+calc.maintainer-groups.hsd,University of Applied Sciences Düsseldorf,Universidade de Ciências Aplicadas de Düsseldorf, Hochschule Düsseldorf,Universidad de Düsseldorf, Düsseldorf 대학교
 calc.editors.button-history,history,Histórico,Verlauf,historia,기록
 calc.editors.insert-relation-title,Insert,Inserir,Einfügen,Insertar,Insert
 calc.editors.insert-relation-tooltip,Insert relation or column names,Inserir relação ou nomes de coluna,Beziehungs- oder Spaltennamen einfügen,Insertar nombres de relaciones o columnas,Insert relation or column names
